# assignment-dspy

./: README.md  env_template.txt  pyproject.toml
assignment/: config.py  demo.py  main.py  prototype_pipeline.py
assignment/demo_results/: complex_research_extraction.json  simple_company_extraction.json
assignment/results/: extraction_results.json
demo_results/: complex_research_extraction.json  large_enterprise_extraction.json  simple_company_extraction.json  unstructured_text_extraction.json
tests/: test_config.py
